nazara_graphics_sources = files(
  'AbstractBackground.cpp',
  'AbstractRenderQueue.cpp',
  'AbstractRenderTechnique.cpp',
  'AbstractViewer.cpp',
  'BasicRenderQueue.cpp',
  'Billboard.cpp',
  'ColorBackground.cpp',
  'DeferredBloomPass.cpp',
  'DeferredDOFPass.cpp',
  'DeferredFinalPass.cpp',
  'DeferredFogPass.cpp',
  'DeferredForwardPass.cpp',
  'DeferredFXAAPass.cpp',
  'DeferredGeometryPass.cpp',
  'DeferredPhongLightingPass.cpp',
  'DeferredProxyRenderQueue.cpp',
  'DeferredRenderPass.cpp',
  'DeferredRenderTechnique.cpp',
  'DepthRenderQueue.cpp',
  'DepthRenderTechnique.cpp',
  'Drawable.cpp',
  'ForwardRenderTechnique.cpp',
  'Graphics.cpp',
  'GuillotineTextureAtlas.cpp',
  'InstancedRenderable.cpp',
  'Light.cpp',
  'Material.cpp',
  'MaterialPipeline.cpp',
  'Model.cpp',
  'ParticleController.cpp',
  'ParticleDeclaration.cpp',
  'ParticleEmitter.cpp',
  'ParticleFunctionController.cpp',
  'ParticleFunctionGenerator.cpp',
  'ParticleFunctionRenderer.cpp',
  'ParticleGenerator.cpp',
  'ParticleGroup.cpp',
  'ParticleMapper.cpp',
  'ParticleRenderer.cpp',
  'Renderable.cpp',
  'RenderQueue.cpp',
  'RenderTechniques.cpp',
  'SkeletalModel.cpp',
  'SkinningManager.cpp',
  'SkyboxBackground.cpp',
  'Sprite.cpp',
  'TextSprite.cpp',
  'TextureBackground.cpp',
  'TileMap.cpp',
  'Formats/MeshLoader.cpp',
  'Formats/TextureLoader.cpp',)


nazara_graphics_lib = library('nazara-graphics',
  nazara_graphics_sources,
  include_directories: [nazara_includes, thirdparty_includes],
  dependencies: [nazara_core_dep, nazara_utility_dep, nazara_platform_dep,
                 nazara_renderer_dep])

nazara_graphics_dep = declare_dependency(link_with: nazara_graphics_lib)
